# notion-integra-python

./: .coverage  .gitignore  README.md  pyproject.toml  start.txt  test_notion.py
extension/src/: content.js  manifest.json  mcp_client.js  popup.html  popup.js
src/config/: settings.py
src/core/: mcp_processor.py  mcp_server copy.py  mcp_server.py  mcp_types.py  notion_admin copy.py  notion_admin.py  notion_client.py  notion_operations.py  rate_limiter.py  validators.py
src/tests/: conftest.py  database_validator.py  test_admin.py  test_crud_operations.py  test_mcp.py  test_mcp_operations.py  test_mcpvalidations.py  test_notion_admin.py  test_operations.py  test_validators.py
tests/: __init__.py  conftest.py  test_config.py
